--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <i class="fa-solid fa-house"></i>
     <!-- script -->
      <script src="script.js"></script>
+     <h1>hello</h1>
 </body>
 </html>
